Fixed the bug with a too large image

--- a/assets/stylesheets/base.css
+++ b/assets/stylesheets/base.css
@@ -34,7 +34,7 @@ a:hover p {
 }
 
 article {
-    padding: 30px 0 10px;
+    padding: 10px 0;
     border-bottom: 2px solid #5a9ecd;
 }
 
@@ -44,7 +44,7 @@ article:last-child {
 
 .container {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1080px;
     margin: 100px auto;
     padding: 40px;
     background-color: #fff;
@@ -67,11 +67,8 @@ article:last-child {
 
 .img-holder {
     width: 100%;
+    max-width: 180px;
     margin-right: 30px;
-}
-
-.img-holder img {
-    object-position: 0 -34px;
 }
 
 .info {
@@ -123,6 +120,7 @@ article:last-child {
 }
 
 .summary {
+    margin: 0;
     font-size: 18px;
     font-weight: 600;
     line-height: 26px;
